fix: payment form not hiding on small screens, and date input not visible on iOS

--- a/static/css/attraction.css
+++ b/static/css/attraction.css
@@ -215,6 +215,7 @@ legend,
 
 #tour-date {
   border: none;
+  background-color: #fff;
   font-size: 16px;
   margin-left: 5px;
   height: 35px;
